unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_created_flag__c.field-meta.xml
<CustomField>
	<fullName>metazoa_created_flag__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Created Flag</label>
	<type>Checkbox</type>
</CustomField>