unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_document_folder__c.field-meta.xml
<CustomField>
	<fullName>metazoa_document_folder__c</fullName>
	<label>Document Folder</label>
	<length>200</length>
	<type>Text</type>
</CustomField>