unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_element_name__c.field-meta.xml
<CustomField>
	<fullName>metazoa_element_name__c</fullName>
	<label>Element Name</label>
	<length>200</length>
	<type>Text</type>
</CustomField>