unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_job_action__c.field-meta.xml
<CustomField>
	<fullName>metazoa_job_action__c</fullName>
	<label>Job Action</label>
	<length>200</length>
	<type>Text</type>
</CustomField>