unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_metadata_base__c.field-meta.xml
<CustomField>
	<fullName>metazoa_metadata_base__c</fullName>
	<label>Metadata Base</label>
	<length>200</length>
	<type>Text</type>
</CustomField>