unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_reported_problem__c.field-meta.xml
<CustomField>
	<fullName>metazoa_reported_problem__c</fullName>
	<label>Reported Problem</label>
	<length>200</length>
	<type>Text</type>
</CustomField>