unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_snapshot_push__c.field-meta.xml
<CustomField>
	<fullName>metazoa_snapshot_push__c</fullName>
	<label>Snapshot Push</label>
	<referenceTo>metazoa_snapshot_push__c</referenceTo>
	<relationshipLabel>Snapshot Assets</relationshipLabel>
	<relationshipName>Snapshot_Assets</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>