unpackaged/main/default/objects/metazoa_snapshot_asset__c/fields/metazoa_success_flag__c.field-meta.xml
<CustomField>
	<fullName>metazoa_success_flag__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Success Flag</label>
	<type>Checkbox</type>
</CustomField>